# LOL-Tracker

./: .gitignore  README.md  package-lock.json  package.json
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/lol_api/: mod.rs  model.rs
src/lib/: Champion.svelte  LiveGame.svelte  PlayerInfo.svelte  Players.svelte  Popup.svelte  Teams.svelte
