[package]
name = "LOL-Tracker"
version = "0.0.0"
description = "An app to have fun in League Of Legends ( Possibly the only way :) )"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tokio = { version = "*", features = ["full"] }
rand = "0.8.5"
reqwest = { version = "*", features = ["json"] }
tauri = { version = "1.5", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
